# acg-templates

./: .gitignore  .gitmodules  Justfile  README.md  flake.nix  pyproject.toml  pyrightconfig.json
.rh-project/: init.el
sandbox/: run.py
