[project]
name = "acg-templates"
version = "0.0.1"
description = "Holding project for templates repositories using auto-code generator"
authors = [{ name = "ramblehead", email = "<v.rybynok@gmail.com>" }]
readme = "README.md"

classifiers = ["Private :: Do Not Upload"]

requires-python = "==3.14.*"

dependencies = ["mako~=1.2.4", "autocodegen"]

[tool.uv.sources]
autocodegen = { workspace = true }

[tool.uv.workspace]
members = ["autocodegen"]

[tool.uv.build-backend]
module-name = "templates"
module-root = ""

[dependency-groups]
dev = [
  "black~=25.11.0",
  "basedpyright~=1.37.1",
  "ruff~=0.14.7",
  "ruff-lsp~=0.0.62",
]

[tool.ruff]
lint.select = ["ALL"]

lint.ignore = [
  # No need
  "DJ",    # flake8-django
  "UP009", # UTF-8 encoding declaration is unnecessary
  # subprocess call with shell=True seems safe, but
  # may be changed in the future; consider rewriting without shell
  "S602",
  "S607", # Starting a process with a partial executable path

  # Should be enabled later when project is more mature
  "D100", # module docstring
  "D103", # public function docstring

  # Should be enabled for releases
  "ERA001", # eradicate (e.g. comments)
  "T20",    # flake8-print

  "N999",

  # rh-template dirs should implicit namespace packages
  "INP001", # implicit-namespace-package
]

line-length = 110

extend-exclude = ["**/__pycache__", "**/.*"]

# [tool.ruff.extend-per-file-ignores]
# "templates/*/rh-template/**.*" = [
#   "INP001", # implicit-namespace-package
# ]

[tool.black]
line-length = 79

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
